--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 						<div class="form_content">
 							<div class="menu_box_list">
 								<ul>
-									<li><a class="scroll" href="#home">home</a></li>
-									<li><a class="scroll" href="#about">About</a></li>
-									<li><a class="scroll" href="#services">Services</a></li>
-									<li><a class="scroll" href="#port">portfolio</a></li>
-									<li><a class="scroll" href="#blog">Blog</a></li>
-									<li><a class="scroll" href="#contact">Contact</a></li>
+									<li><a class="scroll" href="http://weibo.com/linpiaochen/">微博</a></li>
+									<li><a class="scroll" href="https://www.zhihu.com/people/jellywong">知乎</a></li>
+									<li><a class="scroll" href="http://www.jianshu.com/users/0c852dd5e473/">简书</a></li>
+									<li><a class="scroll" href="http://blog.csdn.net/guodongxiarent">CSDN</a></li>
+									<li><a class="scroll" href="http://www.linkedin.com/in/jellywang">Linkedin</a></li>
+									<li><a class="scroll" href="https://github.com/guodongxiaren">GitHub</a></li>
 									<div class="clear"> </div>
 								</ul>
 							</div>
@@ -96,8 +96,8 @@
 					<h1>果冻虾仁</h1>
 					<p>爱生活，爱代码 :)</p>
 					<ul>
-						<li><a href="#">Hire Me</a></li>
-						<li><a href="#">Follow Me</a></li>
+						<!-- <li><a href="#">Hire Me</a></li> -->
+						<li><a href="#port">Follow Me</a></li>
 					</ul>
 				</div>
 				<!-- banner-info -->
@@ -116,8 +116,8 @@
 				<!-- about-grids -->
 				<div class="about-grids">
 					<div class="col-md-6 about-left-grid">
-						<h3>Videntur Parum</h3>
-						<span>Graphic Designer,UI/UX Expert </span>
+						<h3>果冻虾仁</h3>
+						<span>C++码农，业余段子手，伪文艺青年 </span>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla fam.</p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet purus ipsum. In ante leo, elementum at placerat in, aliquet non lectus. Nam imperdiet magna eu faucibus cursus.</p>
 					</div>
@@ -135,7 +135,6 @@
 		<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
 		<!---//pop-up-box-->
 		<div id="small-dialog" class="mfp-hide">
-			<iframe src="//player.vimeo.com/video/38584262"> </iframe>
 		</div>
 		<script>
 			$(document).ready(function() {
@@ -161,7 +160,7 @@
 			<div class="container">
 				<!-- head-section -->
 				<div class="head-section text-center">
-					<h2>Portfolio</h2>
+					<h2>Follow Me</h2>
 					<span></span>
 				</div>
 				<!-- /head-section -->
@@ -173,8 +172,8 @@
 								<img src="images/port-pic.jpg" class="img-responsive" alt=""/>
 								<div class="mask">
 									<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-									<h3>Product Design</h3>
-									<p>"LimeLight"</p>
+									<h3>微博</h3>
+									<p>"卐果冻虾仁卍"</p>
 								</div>
 							</a> </div>
 						</div>
@@ -184,8 +183,8 @@
 									<img src="images/port-pic1.jpg" class="img-responsive" alt=""/>
 									<div class="mask">
 										<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-										<h3>Product Design</h3>
-										<p>"LimeLight"</p>
+										<h3>知乎</h3>
+										<p>"为中华段子手的崛起而读书"</p>
 									</div>
 								</a> </div>
 							</div>
@@ -301,7 +300,7 @@
 										<div class="container">
 											<div class="footer">
 												<div class="footer-left">
-													<p>Template by <a href="http://w3layouts.com" target="_blank">W3layouts</a></p>
+													<p>我还是个单身狗 <a href="#" target="_blank">=_=|||</a></p>
 												</div>
 												<div class="footer-right">
 													<ul>
