--- a/index.html
+++ b/index.html
@@ -124,37 +124,12 @@
 						<p>。</p>
 					</div>
 					<div class="col-md-6 about-right-grid">
-						<a class="popup-with-zoom-anim" href="#small-dialog"><img src="images/video.jpg" title="name" /></a>
+						<img src="images/siliconvalley.jpg" title="name" />
 					</div>
 				</div>
 				<!-- about-grids -->
 			</div>
-		</div>
-		<!-- about -->
-		<!--pop-up-box-->
-		<script type="text/javascript" src="js/modernizr.custom.min.js"></script>    
-		<link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all"/>
-		<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
-		<!---//pop-up-box-->
-		<div id="small-dialog" class="mfp-hide">
-		</div>
-		<script>
-			$(document).ready(function() {
-				$('.popup-with-zoom-anim').magnificPopup({
-					type: 'inline',
-					fixedContentPos: false,
-					fixedBgPos: true,
-					overflowY: 'auto',
-					closeBtnInside: true,
-					preloader: false,
-					midClick: true,
-					removalDelay: 300,
-					mainClass: 'my-mfp-zoom-in'
-				});
-
-			});
-		</script>								  
-		<!--//fea-video-->
+		</div>					  
 
 		<!-- services -->
 		<!-- portfolio -->
@@ -169,20 +144,20 @@
 				<!-- portfolio-grids -->
 				<div class="portfolio-grids">
 					<div class="portfolio-grid about-grid">
-						<a href="images/port-pic.jpg" title="name" rel="title2">
+						<a href="http://weibo.com/linpiaochen/" title="name" rel="title2">
 							<div class="view view-first">
-								<img src="images/port-pic.jpg" class="img-responsive" alt=""/>
+								<img src="images/weibo.jpg" class="img-responsive" alt=""/>
 								<div class="mask">
 									<div class="info"><img src="images/hover-icon.png" alt=""/></div>
 									<h3>微博</h3>
-									<p>"卐果冻虾仁卍"</p>
+									<p>"卐果冻虾仁卍 的日常生活"</p>
 								</div>
 							</a> </div>
 						</div>
 						<div class="portfolio-grid about-grid">
-							<a href="images/port-pic1.jpg" title="name" rel="title2">
+							<a href="https://www.zhihu.com/people/jellywong" title="name" rel="title2">
 								<div class="view view-first">
-									<img src="images/port-pic1.jpg" class="img-responsive" alt=""/>
+									<img src="images/zhihu.png" class="img-responsive" alt=""/>
 									<div class="mask">
 										<div class="info"><img src="images/hover-icon.png" alt=""/></div>
 										<h3>知乎</h3>
@@ -191,80 +166,88 @@
 								</a> </div>
 							</div>
 							<div class="portfolio-grid about-grid">
-								<a href="images/port-pic2.jpg" title="name" rel="title2">
+								<a href="http://blog.csdn.net/guodongxiarent" title="name" rel="title2">
 									<div class="view view-first">
-										<img src="images/port-pic2.jpg" class="img-responsive" alt=""/>
+										<img src="images/csdn.png" class="img-responsive" alt=""/>
 										<div class="mask">
 											<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-											<h3>Product Design</h3>
-											<p>"LimeLight"</p>
+											<h3>CSDN</h3>
+											<p>我的博客</p>
 										</div>
 									</a> </div>
 								</div>
 								<div class="portfolio-grid about-grid">
-									<a href="images/port-pic3.jpg" title="name" rel="title2">
+									<a href="http://www.jianshu.com/users/0c852dd5e473/" title="name" rel="title2">
 										<div class="view view-first">
-											<img src="images/port-pic3.jpg" class="img-responsive" alt=""/>
+											<img src="images/jianshu.jpg" class="img-responsive" alt=""/>
 											<div class="mask">
 												<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-												<h3>Product Design</h3>
-												<p>"LimeLight"</p>
+												<h3>简书</h3>
+												<p>闲言碎语</p>
 											</div>
 										</a> </div>
 									</div>
 									<div class="portfolio-grid about-grid">
-										<a href="images/port-pic5.jpg" title="name" rel="title2">
+										<a href="https://github.com/guodongxiaren" title="name" rel="title2">
 											<div class="view view-first">
-												<img src="images/port-pic5.jpg" class="img-responsive" alt=""/>
+												<img src="images/github.jpg" class="img-responsive" alt=""/>
 												<div class="mask">
 													<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-													<h3>Product Design</h3>
-													<p>"LimeLight"</p>
+													<h3>GitHub</h3>
+													<p>"嗯。。比较水"</p>
 												</div>
 											</a> </div>
 										</div>
+
 										<div class="portfolio-grid about-grid">
-											<a href="images/port-pic6.jpg" title="name" rel="title2">
+											<a href="mailto:guodongxiaren@163.com" title="name" rel="title2">
 												<div class="view view-first">
-													<img src="images/port-pic6.jpg" class="img-responsive" alt=""/>
+													<img src="images/mail.jpg" class="img-responsive" alt=""/>
 													<div class="mask">
 														<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-														<h3>Product Design</h3>
-														<p>"LimeLight"</p>
+														<h3>电子邮箱</h3>
+														<p>"给我写信"</p>
+													</div>
+												</a> </div>
+											</div>
+										</div>
+
+										<div class="portfolio-grid about-grid">
+											<a href="https://segmentfault.com/u/guodongxiaren" title="name" rel="title2">
+												<div class="view view-first">
+													<img src="images/segmentfault.jpg" class="img-responsive" alt=""/>
+													<div class="mask">
+														<div class="info"><img src="images/hover-icon.png" alt=""/></div>
+														<h3>segmentfault</h3>
+														<p>"看名字感觉像山寨版StackOverflow"</p>
 													</div>
 												</a> </div>
 											</div>
 											<div class="portfolio-grid about-grid">
-												<a href="images/port-pic7.jpg" title="name" rel="title2">
+												<a href="https://itunes.apple.com/cn/podcast/id1086147224" title="name" rel="title2">
 													<div class="view view-first">
-														<img src="images/port-pic7.jpg" class="img-responsive" alt=""/>
+														<img src="images/podcast.jpg" class="img-responsive" alt=""/>
 														<div class="mask">
 															<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-															<h3>Product Design</h3>
-															<p>"LimeLight"</p>
+															<h3>Podcast 播客</h3>
+															<p>"Jelly叔叔的小屋"</p>
 														</div>
 													</a> </div>
 												</div>
-												<div class="portfolio-grid about-grid">
-													<a href="images/port-pic1.jpg" title="name" rel="title2">
-														<div class="view view-first">
-															<img src="images/port-pic1.jpg" class="img-responsive" alt=""/>
-															<div class="mask">
-																<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-																<h3>Product Design</h3>
-																<p>"LimeLight"</p>
-															</div>
-														</a> </div>
-													</div>
-												</div>
+
 												<!-- portfolio-grids -->
 											</div>
 										</div>
 										<!-- /portfolio -->
 
-										
+										<div class="head-section text-center">
+											<h2>mottos</h2>
+											<span></span>
+										</div>	
+										<br>
 										<div class="feedback">
 											<div class="container">
+
 												<div id="owl-demo3" class="owl-carousel owl-carousel1">
 													<div class="item">
 														<div class="feedback-grid text-center">
@@ -292,7 +275,7 @@
 
 										<!-- catch-on -->
 										<div id="contact" class="catch-on text-center">
-											<p>和我联系 <a class="catch" href="mailto:guodongxiaren@163.com">Mail to Me</a></p>
+<!-- 											<p>和我联系 <a class="catch" href="mailto:guodongxiaren@163.com">Mail to Me</a></p> -->
 										</div>
 										<!-- /catch-on -->
 										<!-- footer -->
@@ -326,6 +309,7 @@
 
 								 	});
 								 </script>
+
 								 <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 								</div>
 								<!-- /footer -->
