nav span from right to left

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<title>果冻虾仁</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Portfolio  Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-	Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -96,7 +95,7 @@
 				<div class="banner-info text-center">
 					<img src="images/pic.png" class="img-responsive" alt=""/>
 					<h1>果冻虾仁</h1>
-					<p>爱生活，爱代码 :)</p>
+					<p>爱代码， 爱生活  :)</p>
 					<ul>
 						<!-- <li><a href="#">Hire Me</a></li> -->
 						<li><a href="#port">Follow Me</a></li>
@@ -119,9 +118,9 @@
 				<div class="about-grids">
 					<div class="col-md-6 about-left-grid">
 						<h3>果冻虾仁</h3>
-						<span>C++码农，业余段子手，伪文艺青年 </span>
+						<span>大后台 程序猿，C++码农，业余段子手，伪文艺青年 </span>
 						<p>。</p>
-						<p>。</p>
+						<!-- <p>。</p> -->
 					</div>
 					<div class="col-md-6 about-right-grid">
 						<img src="images/siliconvalley.jpg" title="name" />
@@ -152,7 +151,8 @@
 									<h3>微博</h3>
 									<p>"卐果冻虾仁卍 的日常生活"</p>
 								</div>
-							</a> </div>
+							</a>
+							 </div>
 						</div>
 						<div class="portfolio-grid about-grid">
 							<a href="https://www.zhihu.com/people/jellywong" title="name" rel="title2">
@@ -163,7 +163,8 @@
 										<h3>知乎</h3>
 										<p>"为中华段子手的崛起而读书"</p>
 									</div>
-								</a> </div>
+								</a>
+								 </div>
 							</div>
 							<div class="portfolio-grid about-grid">
 								<a href="http://blog.csdn.net/guodongxiarent" title="name" rel="title2">
@@ -174,7 +175,8 @@
 											<h3>CSDN</h3>
 											<p>我的博客</p>
 										</div>
-									</a> </div>
+									</a>
+									 </div>
 								</div>
 								<div class="portfolio-grid about-grid">
 									<a href="http://www.jianshu.com/users/0c852dd5e473/" title="name" rel="title2">
@@ -185,7 +187,8 @@
 												<h3>简书</h3>
 												<p>闲言碎语</p>
 											</div>
-										</a> </div>
+										</a>
+										 </div>
 									</div>
 									<div class="portfolio-grid about-grid">
 										<a href="https://github.com/guodongxiaren" title="name" rel="title2">
@@ -196,7 +199,8 @@
 													<h3>GitHub</h3>
 													<p>"嗯。。比较水"</p>
 												</div>
-											</a> </div>
+											</a>
+											 </div>
 										</div>
 
 										<div class="portfolio-grid about-grid">
@@ -208,7 +212,8 @@
 														<h3>电子邮箱</h3>
 														<p>"给我写信"</p>
 													</div>
-												</a> </div>
+												</a> 
+												</div>
 											</div>
 										</div>
 
@@ -221,7 +226,8 @@
 														<h3>segmentfault</h3>
 														<p>"看名字感觉像山寨版StackOverflow"</p>
 													</div>
-												</a> </div>
+												</a>
+												 </div>
 											</div>
 											<div class="portfolio-grid about-grid">
 												<a href="https://itunes.apple.com/cn/podcast/id1086147224" title="name" rel="title2">
@@ -232,7 +238,8 @@
 															<h3>Podcast 播客</h3>
 															<p>"Jelly叔叔的小屋"</p>
 														</div>
-													</a> </div>
+													</a>
+													 </div>
 												</div>
 
 												<!-- portfolio-grids -->
