bug fix,无效的跳转

--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
 	<link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
 	<!---//webfonts-->
 	<!-- light-box-script -->
-	<script src="js/jquery.chocolat.js"></script>
-	<link rel="stylesheet" href="css/chocolat.css" type="text/css" media="screen" charset="utf-8" />
 	<script type="text/javascript" charset="utf-8">
 		$(function() {
-			$('.about-grid a').Chocolat({linkImages:false});
+			$('.about-grid a').attr({target: "_blank"});
 		});
 	</script>
 	<!-- light-box-script -->
@@ -152,187 +150,190 @@
 									<p>"卐果冻虾仁卍 的日常生活"</p>
 								</div>
 							</a>
-							 </div>
 						</div>
-						<div class="portfolio-grid about-grid">
-							<a href="https://www.zhihu.com/people/jellywong" title="name" rel="title2">
-								<div class="view view-first">
-									<img src="images/zhihu.png" class="img-responsive" alt=""/>
-									<div class="mask">
-										<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-										<h3>知乎</h3>
-										<p>"为中华段子手的崛起而读书"</p>
-									</div>
-								</a>
-								 </div>
-							</div>
-							<div class="portfolio-grid about-grid">
-								<a href="http://blog.csdn.net/guodongxiarent" title="name" rel="title2">
-									<div class="view view-first">
-										<img src="images/csdn.png" class="img-responsive" alt=""/>
-										<div class="mask">
-											<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-											<h3>CSDN</h3>
-											<p>我的博客</p>
-										</div>
-									</a>
-									 </div>
+					</div>
+					<div class="portfolio-grid about-grid">
+						<a href="https://www.zhihu.com/people/jellywong" title="name" rel="title2">
+							<div class="view view-first">
+								<img src="images/zhihu.png" class="img-responsive" alt=""/>
+								<div class="mask">
+									<div class="info"><img src="images/hover-icon.png" alt=""/></div>
+									<h3>知乎</h3>
+									<p>"为中华段子手的崛起而读书"</p>
 								</div>
-								<div class="portfolio-grid about-grid">
-									<a href="http://www.jianshu.com/users/0c852dd5e473/" title="name" rel="title2">
-										<div class="view view-first">
-											<img src="images/jianshu.jpg" class="img-responsive" alt=""/>
-											<div class="mask">
-												<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-												<h3>简书</h3>
-												<p>闲言碎语</p>
-											</div>
-										</a>
-										 </div>
-									</div>
-									<div class="portfolio-grid about-grid">
-										<a href="https://github.com/guodongxiaren" title="name" rel="title2">
-											<div class="view view-first">
-												<img src="images/github.jpg" class="img-responsive" alt=""/>
-												<div class="mask">
-													<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-													<h3>GitHub</h3>
-													<p>"嗯。。比较水"</p>
-												</div>
-											</a>
-											 </div>
-										</div>
+							</a>
+						</div>
+					</div>
 
-										<div class="portfolio-grid about-grid">
-											<a href="mailto:guodongxiaren@163.com" title="name" rel="title2">
-												<div class="view view-first">
-													<img src="images/mail.jpg" class="img-responsive" alt=""/>
-													<div class="mask">
-														<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-														<h3>电子邮箱</h3>
-														<p>"给我写信"</p>
-													</div>
-												</a> 
-												</div>
-											</div>
-										</div>
-
-										<div class="portfolio-grid about-grid">
-											<a href="https://segmentfault.com/u/guodongxiaren" title="name" rel="title2">
-												<div class="view view-first">
-													<img src="images/segmentfault.jpg" class="img-responsive" alt=""/>
-													<div class="mask">
-														<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-														<h3>segmentfault</h3>
-														<p>"看名字感觉像山寨版StackOverflow"</p>
-													</div>
-												</a>
-												 </div>
-											</div>
-											<div class="portfolio-grid about-grid">
-												<a href="https://itunes.apple.com/cn/podcast/id1086147224" title="name" rel="title2">
-													<div class="view view-first">
-														<img src="images/podcast.jpg" class="img-responsive" alt=""/>
-														<div class="mask">
-															<div class="info"><img src="images/hover-icon.png" alt=""/></div>
-															<h3>Podcast 播客</h3>
-															<p>"Jelly叔叔的小屋"</p>
-														</div>
-													</a>
-													 </div>
-												</div>
-
-												<!-- portfolio-grids -->
-											</div>
-										</div>
-										<!-- /portfolio -->
-
-										<div class="head-section text-center">
-											<h2>mottos</h2>
-											<span></span>
-										</div>	
-										<br>
-										<div class="feedback">
-											<div class="container">
-
-												<div id="owl-demo3" class="owl-carousel owl-carousel1">
-													<div class="item">
-														<div class="feedback-grid text-center">
-															<p>"Talk is cheap, show me the code."</p>
-															<h4>Linus Torvalds</h4>
-														</div>
-													</div>
-													<div class="item">
-														<div class="feedback-grid text-center">
-															<p>“一朝春尽红颜老，花落人亡两不知”</p>
-															<h4>葬花吟</h4>
-														</div>
-													</div>
-													<div class="item">
-														<div class="feedback-grid text-center">
-															<p>“汝若欲学诗，功夫在诗外”</p>
-															<p></p>
-															<h4>陆游<span> </span></h4>
-														</div>
-													</div>
-												</div>
-											</div>
-											<!-- Feedback -->
-										</div>
-
-										<!-- catch-on -->
-										<div id="contact" class="catch-on text-center">
-<!-- 											<p>和我联系 <a class="catch" href="mailto:guodongxiaren@163.com">Mail to Me</a></p> -->
-										</div>
-										<!-- /catch-on -->
-										<!-- footer -->
-										<div class="container">
-											<div class="footer">
-												<div class="footer-left">
-													<p>Copyrights © 2016 我还是个单身狗. All Rights Reserved. <a href="#" target="_blank">=_=|||</a></p>
-												</div>
-												<div class="footer-right">
-													<ul>
-														<li><a href="#"><span class="face"> </span></a></li>
-														<li><a href="#"><span class="twit"> </span></a></li>
-														<li><a href="#"><span class="dri"> </span></a></li>
-														<li><a href="#"><span class="tech"> </span></a></li>
-													</ul>
-												</div>
-												<div class="clearfix"> </div>
-											</div>
-											<script type="text/javascript">
-												$(document).ready(function() {
-										/*
-										var defaults = {
-								  			containerID: 'toTop', // fading element id
-											containerHoverID: 'toTopHover', // fading element hover id
-											scrollSpeed: 1200,
-											easingType: 'linear' 
-								 		};
-								 		*/
-
-								 		$().UItoTop({ easingType: 'easeOutQuart' });
-
-								 	});
-								 </script>
-
-								 <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+					<div class="portfolio-grid about-grid">
+						<a href="https://github.com/guodongxiaren" title="name" rel="title2">
+							<div class="view view-first">
+								<img src="images/github.jpg" class="img-responsive" alt=""/>
+								<div class="mask">
+									<div class="info"><img src="images/hover-icon.png" alt=""/></div>
+									<h3>GitHub</h3>
+									<p>"嗯。。比较水"</p>
 								</div>
-								<!-- /footer -->
-								<!-- /container -->
-								<script type="text/javascript">
-									$(document).ready(function() {
-										$("#owl-demo3").owlCarousel({
-											items : 1,
-											lazyLoad : false,
-											autoPlay : true,
-											navigation : false,
-											navigationText :  true,
-											pagination :true,
-										});
-									});
-								</script>
-							</body>
-							</html>
+							</a>
+						</div>
+					</div>
+
+					<div class="portfolio-grid about-grid">
+						<a href="http://blog.csdn.net/guodongxiarent" title="name" rel="title2">
+							<div class="view view-first">
+								<img src="images/csdn.png" class="img-responsive" alt=""/>
+								<div class="mask">
+									<div class="info"><img src="images/hover-icon.png" alt=""/></div>
+									<h3>CSDN</h3>
+									<p>我的博客</p>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="portfolio-grid about-grid">
+						<a href="http://www.jianshu.com/users/0c852dd5e473/" title="name" rel="title2">
+							<div class="view view-first">
+								<img src="images/jianshu.jpg" class="img-responsive" alt=""/>
+								<div class="mask">
+									<div class="info"><img src="images/hover-icon.png" alt=""/></div>
+									<h3>简书</h3>
+									<p>闲言碎语</p>
+								</div>
+							</a>
+						</div>
+					</div>
+
+					<div class="portfolio-grid about-grid">
+						<a href="https://segmentfault.com/u/guodongxiaren" title="name" rel="title2">
+							<div class="view view-first">
+								<img src="images/segmentfault.jpg" class="img-responsive" alt=""/>
+								<div class="mask">
+									<div class="info"><img src="images/hover-icon.png" alt=""/></div>
+									<h3>segmentfault</h3>
+									<p>"看名字感觉像山寨版StackOverflow"</p>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="portfolio-grid about-grid">
+						<a href="https://itunes.apple.com/cn/podcast/id1086147224" title="name" rel="title2">
+							<div class="view view-first">
+								<img src="images/podcast.jpg" class="img-responsive" alt=""/>
+								<div class="mask">
+									<div class="info"><img src="images/hover-icon.png" alt=""/></div>
+									<h3>Podcast 播客</h3>
+									<p>"Jelly叔叔的小屋"</p>
+								</div>
+							</a>
+						</div>
+					</div>
+
+					<div class="portfolio-grid about-grid">
+						<a href="mailto:guodongxiaren@163.com" title="name" rel="title2">
+							<div class="view view-first">
+								<img src="images/mail.jpg" class="img-responsive" alt=""/>
+								<div class="mask">
+									<div class="info"><img src="images/hover-icon.png" alt=""/></div>
+									<h3>电子邮箱</h3>
+									<p>"给我写信"</p>
+								</div>
+							</a> 
+						</div>
+					</div>
+				</div>
+				<!-- portfolio-grids -->
+			</div>
+		</div>
+		<!-- /portfolio -->
+
+		<div class="head-section text-center">
+			<h2>mottos</h2>
+			<span></span>
+		</div>	
+		<br>
+		<div class="feedback">
+			<div class="container">
+
+				<div id="owl-demo3" class="owl-carousel owl-carousel1">
+					<div class="item">
+						<div class="feedback-grid text-center">
+							<p>"Talk is cheap, show me the code."</p>
+							<h4>Linus Torvalds</h4>
+						</div>
+					</div>
+
+					<div class="item">
+						<div class="feedback-grid text-center">
+							<p>“汝若欲学诗，功夫在诗外”</p>
+							<p></p>
+							<h4>陆游<span> </span></h4>
+						</div>
+					</div>
+
+					<div class="item">
+						<div class="feedback-grid text-center">
+							<p>“选择比努力更重要”</p>
+							<h4>XXX</h4>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Feedback -->
+		</div>
+
+		<!-- catch-on -->
+		<div id="contact" class="catch-on text-center">
+			<!-- 											<p>和我联系 <a class="catch" href="mailto:guodongxiaren@163.com">Mail to Me</a></p> -->
+		</div>
+		<!-- /catch-on -->
+		<!-- footer -->
+		<div class="container">
+			<div class="footer">
+				<div class="footer-left">
+					<p>Copyrights © 2016 我还是个单身狗. All Rights Reserved. <a href="#" target="_blank">=_=|||</a></p>
+				</div>
+				<div class="footer-right">
+					<ul>
+						<li><a href="#"><span class="face"> </span></a></li>
+						<li><a href="#"><span class="twit"> </span></a></li>
+						<li><a href="#"><span class="dri"> </span></a></li>
+						<li><a href="#"><span class="tech"> </span></a></li>
+					</ul>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<script type="text/javascript">
+				$(document).ready(function() {
+					/*
+					var defaults = {
+			  			containerID: 'toTop', // fading element id
+						containerHoverID: 'toTopHover', // fading element hover id
+						scrollSpeed: 1200,
+						easingType: 'linear' 
+			 		};
+			 		*/
+
+			 		$().UItoTop({ easingType: 'easeOutQuart' });
+
+			 	});
+			 </script>
+
+			 <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+			</div>
+			<!-- /footer -->
+			<!-- /container -->
+			<script type="text/javascript">
+				$(document).ready(function() {
+					$("#owl-demo3").owlCarousel({
+						items : 1,
+						lazyLoad : false,
+						autoPlay : true,
+						navigation : false,
+						navigationText :  true,
+						pagination :true,
+					});
+				});
+			</script>
+		</body>
+		</html>
 
