--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 					<div class="col-md-6 about-left-grid">
 						<h3>果冻虾仁</h3>
 						<span>大后台 程序猿，C++码农，业余段子手，伪文艺青年 </span>
-						<p>。</p>
+						<p>轻度社交恐惧症</p>
+						<p>欢迎邮件及各平台私信联系，提供大学生学习、求职指导</p>
 						<!-- <p>。</p> -->
 					</div>
 					<div class="col-md-6 about-right-grid">
