--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 					</div>
 
 					<div class="portfolio-grid about-grid">
-						<a href="http://blog.csdn.net/guodongxiarent" title="name" rel="title2">
+						<a href="http://blog.csdn.net/guodongxiaren" title="name" rel="title2">
 							<div class="view view-first">
 								<img src="images/csdn.png" class="img-responsive" alt=""/>
 								<div class="mask">
