--- a/index.html
+++ b/index.html
@@ -335,6 +335,18 @@
 					});
 				});
 			</script>
+			
+			<!-- 百度统计 -->
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	var hm = document.createElement("script");
+	hm.src = "//hm.baidu.com/hm.js?df85d3cfbce8eae562084705d14e0a73";
+	var s = document.getElementsByTagName("script")[0]; 
+	s.parentNode.insertBefore(hm, s);
+	})();
+</script>
+
 		</body>
 		</html>
 
