--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 		<div class="container">
 			<div class="footer">
 				<div class="footer-left">
-					<p>Copyrights © 2016 我还是个单身狗. All Rights Reserved. <a href="#" target="_blank">=_=|||</a></p>
+					<p>Copyrights © 2021 果冻虾仁. All Rights Reserved. <a href="https://beian.miit.gov.cn/#/Integrated/recordQuery" target="_blank"> 粤ICP备18048207号-1 </a></p>
 				</div>
 				<div class="footer-right">
 					<ul>
